force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Admin_Max_Related_Lists__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Admin_Max_Related_Lists__c</fullName>
    <label>Admin Max Related Lists</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>