force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Allow_Contact_Creation__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Allow_Contact_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows users to create contacts</description>
    <label>Allow Contact Creation</label>
    <type>Checkbox</type>
</CustomField>