force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Case_Contact_is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Case_Contact_is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets if the contactfield is mandatory on the case object</description>
    <label>Case Contact is Mandatory</label>
    <type>Checkbox</type>
</CustomField>