force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Chat_Transcript_Save_Mode__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Chat_Transcript_Save_Mode__c</fullName>
    <description>How should the chat transcript be saved in Salesforce.  (Link, Field, Attachment, Field and Attachment)</description>
    <label>Chat Transcript Save Mode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>