force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatLink_Allowed_Domains__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatLink_Allowed_Domains__c</fullName>
    <label>ChatLink Allowed Domains</label>
    <type>Url</type>
</CustomField>