force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Daily_Run_Increase_Time__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Daily_Run_Increase_Time__c</fullName>
    <description>The number of minutes to increase the start time (last run time) to ensure there is overlap in the timing windows.  This will allow for the process to bring in chats which may have been unavailable in the API for some time.</description>
    <label>ChatSync Daily Run Increase Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>