force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Daily_Schedule_Offset__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Daily_Schedule_Offset__c</fullName>
    <description>A randomly chosen interval of time (in minutes) to offset the ongoing process run. This allows the spread of traffic load of LivePerson API clients calls.  (This will be be a number from 0-59)</description>
    <label>ChatSync Daily Schedule Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>