force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Daily_Schedule_Start_Default__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Daily_Schedule_Start_Default__c</fullName>
    <description>Default suggested value of when to start the Daily Sync Process</description>
    <label>ChatSync Daily Schedule Start Default</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>