force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Periodic_Schedule_Interval__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Periodic_Schedule_Interval__c</fullName>
    <description>This will store the interval in hours at which the Periodic process will be scheduled.</description>
    <label>ChatSync Periodic Schedule Interval</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>