force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Periodic_Schedule_Offset__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Periodic_Schedule_Offset__c</fullName>
    <description>A randomly chosen interval of time (in minutes) to offset the ongoing process run. This allows the spread of traffic load of LivePerson API clients calls.</description>
    <label>ChatSync Periodic Schedule Offset</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>