force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ChatSync_Records_Per_Batch__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ChatSync_Records_Per_Batch__c</fullName>
    <label>ChatSync Records Per Batch</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>