force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Disable_AntiClickJack_Code__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Disable_AntiClickJack_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable AntiClickJack Code</label>
    <type>Checkbox</type>
</CustomField>