force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Disable_Modify_Onload_Search_Params__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Disable_Modify_Onload_Search_Params__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable modifying the On-Load Search Params. When Disable_Auto_Search__c is checked this will be unchecked and disabled</description>
    <label>Disable Modify Onload Search Params</label>
    <type>Checkbox</type>
</CustomField>