force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Disable_On_Load_Auto_Search__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Disable_On_Load_Auto_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable On Load Auto Search</label>
    <type>Checkbox</type>
</CustomField>