force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Enabled_Objects__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Enabled_Objects__c</fullName>
    <description>Comma separated list of Salesforce Object API Names (managed by interface so user doesn&apos;t have to manually enter them)</description>
    <label>Enabled Objects</label>
    <type>TextArea</type>
</CustomField>