force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Enabled_Objects_Custom_Limit__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Enabled_Objects_Custom_Limit__c</fullName>
    <label>Enabled Objects Custom Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>