force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Engagement_History_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Engagement_History_Base_Url__c</fullName>
    <label>Engagement History Base Url</label>
    <type>Url</type>
</CustomField>