force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Event_Log_History_Days__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Event_Log_History_Days__c</fullName>
    <inlineHelpText>Number of days back to keep Event Log entries.</inlineHelpText>
    <label>Event Log History Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>