force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Message_API_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Message_API_Timeout_Seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <description># of seconds before attempts to sync Messages in the ChatSync job time out</description>
    <inlineHelpText># of seconds before attempts to sync Messages in the ChatSync job time out</inlineHelpText>
    <label>Message API Timeout (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>