force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Messaging_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Messaging_Base_Url__c</fullName>
    <label>Messaging Base Url</label>
    <type>Url</type>
</CustomField>