force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Messaging_Single_Path__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Messaging_Single_Path__c</fullName>
    <label>Messaging Single Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>