force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Opportunity_Account_is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Opportunity_Account_is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets if the account field is mandatory on the Opportunity  object</description>
    <label>Opportunity Account is Mandatory</label>
    <type>Checkbox</type>
</CustomField>