force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__ReplaceAll_MaxString__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__ReplaceAll_MaxString__c</fullName>
    <description>Salesforce Limitation on the max string size that our replaceAll functionality can handle</description>
    <label>ReplaceAll MaxString</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>