force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Service_Console_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Service_Console_Base_Url__c</fullName>
    <label>Service Console Base Url</label>
    <type>Url</type>
</CustomField>