force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Use_Case_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Use_Case_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets if the newly created case should be assigned using defined assignment rules (can that be toggled on the fly?)</description>
    <label>Use Case Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>