force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__Use_Lead_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Use_Lead_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Lead Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>