force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__User_Edit_Use_Case_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__User_Edit_Use_Case_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Edit Use Case Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>