force-app/main/default/objects/LiveEngage__AdminConfigSettings__c/fields/LiveEngage__User_Edit_Use_Lead_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__User_Edit_Use_Lead_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows user to check / uncheck the Use Assignment Rules checkbox</description>
    <label>User Edit Use Lead Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>